feat: add swag method
